<resources>
    <string name="app_name">TecnoTech</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <string name="default_web_client_id">392003132711-j7gino4og58ul8qj6a4e231kfjlqdpv7.apps.googleusercontent.com</string>
    <string name="mi_google_maps_api_key">AIzaSyB0iNdIYg17aOcf9m4EUvgkF1QMXf4pUX0</string>

    <!--Strings para el tipo de usuario-->
    <string name="tipoVendedor">Vendedor</string>
    <string name="tipoCliente">Cliente</string>
    <string name="tipoAdministrador">Administrador</string>

    <!--Menu Administradores-->
    <string name="btnAgregarA">Agregar</string>

    <!--Menu lateral Vendedor -->
    <string name="inicio_v">Inicio</string>
    <string name="categoriasV">Categorias</string>
    <string name="mi_tienda_v">Mi tienda</string>
    <string name="cerrar_sesion_v">Cerrar sesión</string>


    <!--Menu lateral Cliente -->
    <string name="inicio_c">Inicio</string>
    <string name="mi_perfil_c">Mi perfil</string>
    <string name="cerrar_sesion_c">Cerrar sesión</string>"

    <!--Menu lateral Administrador -->
    <string name="productos_a">Productos</string>
    <string name="usuarios_a">Usuarios</string>
    <string name="vendedores_a">Vendedores</string>
    <string name="administradores_a">Administradores</string>
    <string name="cerrar_sesion_A">Cerrar sesión</string>"

    <!--Menu bottom Vendedor -->
    <string name="mis_productos_v">Mis productos</string>
    <string name="agregar_producto_v">Agregar producto</string>
    <string name="mis_ordenes_v">Ordenes</string>"

    <!--Menu bottom Cliente -->
    <string name="tienda_c">Tienda</string>
    <string name="favoritos_c">Favoritos</string>
    <string name="Ordenes_c">Mis Ordenes</string>
    <string name="Carrito_c">Carrito</string>"

    <!--Menu bottom Administrador -->
    <string name="panel_a">Panel</string>
    <string name="ordenes_a">Ordenes</string>
    <string name="perfil_a">Perfil</string>

    <string name="txt_bienvenido">Bienvenido(a)</string>


    <!--Registro Vendedor -->
    <string name="txtRegistroV">Registro de vendedor</string>
    <string name="etNombresV">Nombres completos</string>
    <string name="etNombreTienda">Nombre de la tienda</string>
    <string name="btnRegistrarV">Registrar</string>"

    <!--Strings globales en los registros, login y administrador-->
    <string name="etEmail">Email</string>
    <string name="etCedula">Cedula</string>
    <string name="etPassword">Contraseña</string>
    <string name="etConfirmarPassword">Confirmar contraseña</string>
    <string name="cuenta">¿Ya tienes una cuenta?</string>

    <!--Registro Cliente -->
    <string name="txtRegistroC">Registro de cliente</string>
    <string name="etNombresC">Nombres completos</string>
    <string name="etDireccion">Direccion de envio</string>
    <string name="btnRegistrarC">Registrarme</string>

    <!--Registro Administrador -->
    <string name="txtRegistroA">Registro de Administrador</string>
    <string name="etNombresA">Nombres completos</string>
    <string name="etDireccionA">Direccion de residencia</string>
    <string name="btnRegistrarA">Registrar</string>

    <!--Login Vendedor -->
    <string name="txtLoginV">Login de vendedor</string>"
    <string name="btnLoginV">Ingresar</string>
    <string name="etDireccionV">Direccion</string>
    <string name="tvRegistrarV">Registrarme</string>

    <!--Strin global para login y registro-->
    <string name="noCuenta">¿No tienes una cuenta?</string>

    <!--Login Cliente -->
    <string name="txtLoginC">Login de cliente</string>
    <string name="btnLoginC">Ingresar</string>
    <string name="tvRegistrarC">Registrarme</string>
    <string name="tvRecuperarPassword">Recuperar Contraseña</string>"

    <!--Login Administrador -->
    <string name="txtLoginA">Login de administrador</string>
    <string name="btnLoginA">Ingresar</string>

    <!--Recuperar Contraseña -->
    <string name="txtInstrucciones">Ingrese su correo electronico para enviarle las instrucciones de recuperacion</string>
    <string name="btnEnviarInstrucciones">Enviar</string>

    <!--Actualizar Contraseña-->
    <string name="txtActualizarPass">Actualizar contraseña</string>
    <string name="txtInstruccionesP">Su nueva contraseña debe ser diferente a la actual</string>
    <string name="etPasswordActual">Contraseña actual</string>
    <string name="etPasswordNueva">Nueva contraseña</string>
    <string name="etPasswordNuevaR">Confirmar nueva contraseña</string>
    <string name="btnActualizarPassword">Actualizar</string>

    <!--Productos-->
    <string name="txtAgregarProductos">Agregar productos</string>
    <string name="etNombresP">Nombre del producto</string>
    <string name="etDescripcionP">Descripción</string>
    <string name="Categoria">Categoria</string>
    <string name="etPrecioP">Precio</string>
    <string name="txtDescuentoP">Descuento</string>
    <string name="etPorcentajeDescuentoP">Ingrese Porcentaje Ejem 20, 50, 60</string>
    <string name="etPrecioConDescuentoP"></string>
    <string name="etNotaDescuentoP">Ej: 10% Descuento</string>
    <string name="btnCalcularPrecioDesc">Calcular</string>
    <string name="precioConDescuentoPTXT">Precio con descuento aplicado</string>
    <string name="btnAgregarProducto">Agregar producto</string>

    <!--Editar Producto-->
    <string name="txtEditarProducto">Editar producto</string>
    <string name="btnEditarProducto">Editar producto</string>

    <!--Editar Administradores-->
    <string name="btnEditarAdministrador">Editar administrador</string>

    <!--Editar Clientes-->
    <string name="txEditarCliente">Editar cliente</string>
    <string name="btnRestablecerContraseña">Restablecer Contraseña</string>
    <string name="btnEditarCliente">Editar cliente</string>

    <!--Editar Vendedores-->
    <string name="txtEditarVendedor">Editar vendedor</string>
    <string name="btnEditarVendedor">Editar vendedor</string>


    <!--Agregar Categorias-->
    <string name="etCategoria">Ingrese Categoria</string>
    <string name="btnAgregarCategoria">Agregar categoria</string>

    <!--Item Producto - V-->
    <string name="item_nombre_p">Nombre del producto</string>
    <string name="item_nota_p">50% OFF</string>
    <string name="item_precio_p">00</string>
    <string name="item_descuento_p">00</string>

    <!--Item Producto - C-->
    <string name="item_agregar_carrito_p">Añadir al carrito</string>
    <string name="etBuscarProducto">Buscar producto</string>

    <!--Item Usuarios - A -->
    <string name="item_nombre_usuario_a">Nombre de usuario</string>
    <string name="item_correo_a">Correo electronico</string>

    <!--Item Vendedores - A -->
    <string name="item_nombre_usuario_v">Nombre de usuario</string>
    <string name="item_correo_v">Correo electronico</string>
    <string name="item_nombre_tienda_v">Nombre de la tienda</string>

    <!--Item Administrador-->
    <string name="item_nombre_admin">Nombre de administrador</string>
    <string name="item_correo_admin">Correo electronico</string>


    <!--Item Categoria - C-->
    <string name="item_nombre_c_c">Nombre de categoria</string>
    <string name="item_ver_productos">Ver productos</string>

    <!--Item Categoria - V-->
    <string name="item_nombre_c_v">Nombre de categoria</string>

    <!--Detalle del producto-->
    <string name="nombrePD">Nombre del producto</string>
    <string name="descripcionPDTXT">Informacion General:</string>
    <string name="descripcionPD">Descripcion</string>
    <string name="precioPD">00</string>
    <string name="precioDescPD">00</string>
    <string name="notaDescPD">50% OFF</string>


    <!--Perfil Administrador-->
    <string name="tvNombrePerfil">Nombre Administrador</string>
    <string name="tvRolPerfil">Administrador</string>
    <string name="tvCorreoPerfil">Correo Electronico</string>
    <string name="tvEmailPerfil">admin@tecnotech.com</string>
    <string name="tvTelefonoPerfil">+57 300 000 0000</string>

    <!--Panel Administrador-->
    <string name="tvPanel">Panel</string>
    <string name="tvUsuariosPanel">Usuarios</string>
    <string name="tvVendedoresPanel">Vendedores</string>
    <string name="tvAdministradoresPanel">Administradores</string>
    <string name="tvProductosPanel">Productos</string>
    <string name="tvOrdenesPanel">Ordenes Realizadas</string>
    <string name="tvNumeroOrden">Orden Numero:</string>
    <string name="tvValorOrden">54884324788</string>
    <string name="tvEstado">Estado:</string>
    <string name="tvEstadoActual">Entregado</string>
    <string name="tvValor">Valor:</string>
    <string name="tvValorProducto">2.500.000</string>

    <!--Mis Ordenes Cliente-->
    <string name="txMisOrdenes">Mis Ordenes</string>


    <!--Carrito de compras-->
    <string name="nombrePCar">Nombre del producto</string>
    <string name="descripcionPCar">Descripcion</string>
    <string name="precioOriginalPCar">00</string>
    <string name="precioDescPCar">00</string>"
    <string name="notaDescPCar">10% OFF</string>
    <string name="canrtidadPCar">1</string>
    <string name="precioFinalPCar">00</string>"
    <string name="btnAgregarCarrito">Agregar al carrito</string>
    <string name="tvTotalPagar">Total a pagar:</string>
    <string name="tvValorTotal">$ 0.00</string>

    <string name="imagenContadorTv">1/5</string>


    <!--Zoom Imagen-->
    <string name="cerrarZoom">Cerrar</string>

    <string name="NuestrosProductos">Nuestros Productos</string>
    <string name="CategoriasTienda">Catagerorias</string>

    <!--Perfil del Cliente-->
    <string name="txtMiPerfil">Mi perfil</string>
    <string name="nombresCPerfil">Nombres Completos</string>
    <string name="correoCPerfil">Correo Electronico</string>
    <string name="direccionCPerfil">Direccion de envio</string>
    <string name="cedulaCPerfil">Cedula</string>
    <string name="fechaRegistroCPerfil">Fecha de registro</string>
    <string name="proveedorCPerfil">Proveedor</string>
    <string name="btnGuardarInfoC">Guardar</string>
    <string name="btnActualizarContraseña">Actualizar Contraseña</string>


    <!--Perfil Vendedor-->
    <string name="nombresVPerfil">Nombres Completos</string>
    <string name="correoVPerfil">Correo Electronico</string>
    <string name="direccionVPerfil">Direccion</string>
    <string name="tiendaVPerfil">Tienda</string>
    <string name="cedulaVPerfil">Cedula</string>
    <string name="btnGuardarInfoV">Guardar</string>
    <string name="fechaRegistroVPerfil">Fecha de registro</string>

    <!--Perfil Administrador-->
    <string name="nombresAPerfil">Nombres Completos</string>
    <string name="correoAPerfil">Correo Electronico</string>
    <string name="direccionAPerfil">Direccion</string>
    <string name="cedulaAPerfil">Cedula</string>
    <string name="btnGuardarInfoA">Guardar</string>
    <string name="fechaRegistroAPerfil">Fecha de registro</string>


    <!--Mapas-->
    <string name="txtSeleccionarUbicacion">Seleccione una ubicacion</string>
    <string name="btn_listo">Confirmar</string>

    <string name="sumaProductos">Suma Productos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Mi_Tienda">Mi Tienda</string>
    <string name="Mis_productos">Mis Productos</string>
    <string name="Ordenes">Ordenes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="tienda">Tienda</string>
    <string name="Usuarios">Usuarios</string>
    <string name="Vendedores">Vendedores</string>
    <string name="Administradores">Administradores</string>
    <string name="Panel">Panel</string>
    <string name="Perfil">Perfil</string>
    <string name="Productos">Productos</string>
    <string name="Inicio">Inicio</string>
    <string name="btnConfirmarOrden">Confirmar Orden</string>

</resources>