<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:Tools="http://schemas.android.com/tools"
    Tools:showIn="navigation_view">

    <group
        android:id="@+id/grupo_op"
        android:checkableBehavior="single">

        <item
            android:id="@+id/inicio_v"
            android:title="@string/inicio_v"
            android:icon="@drawable/ico_inicio"
            />

        <item
            android:id="@+id/categoriasV"
            android:title="@string/categoriasV"
            android:icon="@drawable/ico_categorias"
            />

        <item
            android:id="@+id/mi_tienda_v"
            android:title="@string/mi_tienda_v"
            android:icon="@drawable/ico_mi_tienda"/>

    </group>

    <item
        android:id="@+id/cerrar_sesion_v"
        android:title="@string/cerrar_sesion_v"
        android:icon="@drawable/ico_cerrar"/>

</menu>