<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Cliente.Nav_Fragments_Cliente.FragmentMiPerfilC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nombresCPerfil"
            android:hint="@string/nombresCPerfil"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/correoCPerfil"
            android:hint="@string/correoCPerfil"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/cedulaCPerfil"
            android:hint="@string/cedulaCPerfil"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/direccionCPerfil"
            android:hint="@string/direccionCPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/fechaRegistroCPerfil"
            android:hint="@string/fechaRegistroCPerfil"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:text="@string/btnGuardarInfoC"
            android:id="@+id/btnGuardarInfoC"
            android:layout_gravity="center"
            app:cornerRadius="8dp"
            android:textAllCaps="true"
            android:backgroundTint="@color/azul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>



</ScrollView>