<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Cliente.Nav_Fragments_Cliente.FragmentMiPerfilC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/toolbarRL"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <TextView
                android:text="@string/txtMiPerfil"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:background="@color/plomo"
                android:layout_height="1dp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgVPerfil"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/img_perfil"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/nombresVPerfil"
                    android:hint="@string/nombresVPerfil"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/correoVPerfil"
                    android:hint="@string/correoVPerfil"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/cedulaVPerfil"
                    android:hint="@string/cedulaVPerfil"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/tiendaVPerfil"
                    android:hint="@string/tiendaVPerfil"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/ubicacion"
                    android:hint="@string/direccionVPerfil"
                    android:inputType="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/fechaRegistroVPerfil"
                android:hint="@string/fechaRegistroVPerfil"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <com.google.android.material.button.MaterialButton
                android:text="@string/btnGuardarInfoV"
                android:id="@+id/btnGuardarInfoV"
                android:layout_gravity="center"
                app:cornerRadius="8dp"
                android:textAllCaps="true"
                android:backgroundTint="@color/azul"
                android:layout_width="250dp"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnActualizarContraseña"
                android:text="@string/btnActualizarContraseña"
                android:backgroundTint="@color/azul"
                app:cornerRadius="8dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:textAllCaps="true"
                android:layout_width="250dp"
                android:layout_height="wrap_content"/>



        </LinearLayout>

    </LinearLayout>





</ScrollView>